# llama_scope_demo

./: .gitignore  README.md  config.yaml  pyproject.toml  run_llama_scope_lxr.py  vis_config.yaml
data/: input.csv
src/: main.py
src/llama_scope/: __init__.py  config.py  encoder.py  loader.py  writer.py
vis/: main.py
vis/llama_vis/: __init__.py  config.py  loader.py  plotter.py  stats.py
