[project]
name = "llama-scope-demo"
version = "0.1.0"
description = "Llama Scope SAE feature extraction tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "sae-lens>=6.22.3",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "typer>=0.12.0",
]
